Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -46,6 +46,8 @@ sidebar_position: 4
  - fixed `spo serviceprincipal grant list` API issue [#6757](https://github.com/pnp/cli-microsoft365/issues/6757)
  - updated `spo homesite` options and output [#6731](https://github.com/pnp/cli-microsoft365/issues/6731)
  - removed deprecated aliases [#6532](https://github.com/pnp/cli-microsoft365/issues/6532)
+ - removed deprecated options [#6481](https://github.com/pnp/cli-microsoft365/issues/6481)
+ - moved 'spo tenant site' commands to 'spo site' [#6879](https://github.com/pnp/cli-microsoft365/issues/6879)
 
 ## [v10.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.11.0)
 
