Fixes failing docs build

--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -256,7 +256,7 @@ Command | Old option | New option
 [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) | `siteUrl ` | `url`
 [spo hubsite get](./cmd/spo/hubsite/hubsite-get.mdx) | `includeAssociatedSites` | `withAssociatedSites`
 [spo hubsite list](./cmd/spo/hubsite/hubsite-list.mdx) | `includeAssociatedSites` | `withAssociatedSites`
-[spo tenant site list](./cmd/spo/tenant/tenant-site-list.mdx) | `includeOneDriveSites` | `withOneDriveSites`
+[spo site list](./cmd/spo/site/site-list.mdx) | `includeOneDriveSites` | `withOneDriveSites`
 [spo term list](./cmd/spo/term/term-list.mdx) | `includeChildTerms` | `withChildTerms`
 [teams chat member add](./cmd/teams/chat/chat-member-add.mdx) | `includeAllHistory` | `withAllHistory`
 [viva engage network list](./cmd/viva/engage/engage-network-list.mdx) | `includeSuspended` | `withSuspended`
