--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -48,6 +48,8 @@ sidebar_position: 4
  - removed deprecated aliases [#6532](https://github.com/pnp/cli-microsoft365/issues/6532)
  - removed deprecated options [#6481](https://github.com/pnp/cli-microsoft365/issues/6481)
  - moved 'spo tenant site' commands to 'spo site' [#6879](https://github.com/pnp/cli-microsoft365/issues/6879)
+ - updated 'spe containertype' commands to use Graph [#6840](https://github.com/pnp/cli-microsoft365/issues/6840)
+ - updated 'spo homesite add' options [#6881](https://github.com/pnp/cli-microsoft365/issues/6881)
 
 ## [v10.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.11.0)
 
