Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -31,6 +31,7 @@ sidebar_position: 4
 - migrated 'entra administrativeunit remove' to Zod. [6812](https://github.com/pnp/cli-microsoft365/issues/6812)
 - migrated 'entra administrativeunit add' to Zod. [6814](https://github.com/pnp/cli-microsoft365/issues/6814)
 - refactored how unknown options are configured for zod for some commands. [6889](https://github.com/pnp/cli-microsoft365/issues/6889)
+- restructured v11 upgrade guidance. [6887](https://github.com/pnp/cli-microsoft365/issues/6887)
 
 ### ⚠️ Breaking changes
 
