Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,13 @@ sidebar_position: 4
 
 # Release notes
 
+## v11.1.0 (beta)
+
+### Changes
+
+- migrated [flow environment list](../cmd/flow/environment/environment-list.mdx) to Zod [#6901](https://github.com/pnp/cli-microsoft365/issues/6901)
+- migrated [pp environment list](../cmd/pp/environment/environment-list.mdx) to Zod [#6903](https://github.com/pnp/cli-microsoft365/issues/6903)
+
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
 ### New commands
