--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -10,6 +10,7 @@ sidebar_position: 4
 
 - migrated [flow environment list](../cmd/flow/environment/environment-list.mdx) to Zod [#6901](https://github.com/pnp/cli-microsoft365/issues/6901)
 - migrated [pp environment list](../cmd/pp/environment/environment-list.mdx) to Zod [#6903](https://github.com/pnp/cli-microsoft365/issues/6903)
+- migrated [status](../cmd/status.mdx) to Zod [#6912](https://github.com/pnp/cli-microsoft365/issues/6912)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
