Added minimal permission for 'entra organization list' commands. Closes #6947

--- a/docs/docs/cmd/entra/organization/organization-list.mdx
+++ b/docs/docs/cmd/entra/organization/organization-list.mdx
@@ -21,7 +21,24 @@ m365 entra organization list [options]
 
 <Global />
 
-## Remarks
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | User.Read, Organization.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | Organization.Read.All      |
+
+  </TabItem>
+</Tabs>
 
 :::info
 
