docs: add minimal permissions for entra organization list command
- Added Permissions section to organization-list.mdx
- Documents Organization.Read.All and User.Read permissions for both delegated and application auth
- Closes #6947

--- a/docs/docs/cmd/entra/organization/organization-list.mdx
+++ b/docs/docs/cmd/entra/organization/organization-list.mdx
@@ -30,6 +30,25 @@ All other properties return with null values. To read all properties, use at lea
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                      |
+  |-----------------|--------------------------------------------------|
+  | Microsoft Graph | Organization.Read.All, User.Read                 |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                      |
+  |-----------------|--------------------------------------------------|
+  | Microsoft Graph | Organization.Read.All, User.Read                 |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Retrieve organizations
