--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,6 +11,7 @@ sidebar_position: 4
 - migrated [flow environment list](../cmd/flow/environment/environment-list.mdx) to Zod [#6901](https://github.com/pnp/cli-microsoft365/issues/6901)
 - migrated [pp environment list](../cmd/pp/environment/environment-list.mdx) to Zod [#6903](https://github.com/pnp/cli-microsoft365/issues/6903)
 - migrated [status](../cmd/status.mdx) to Zod [#6912](https://github.com/pnp/cli-microsoft365/issues/6912)
+- migrated [booking business list](../cmd/booking/business/business-list.mdx) to Zod [#6891](https://github.com/pnp/cli-microsoft365/issues/6891)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
