Added minimal permissions to Entra enterpriseapp commands

--- a/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-add.mdx
+++ b/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-add.mdx
@@ -59,6 +59,26 @@ Creates an enterprise application for a registered Entra app with the specified 
 m365 entra enterpriseapp add --objectId b2307a39-e878-458b-bc90-03bc578531d6
 ```
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource       | Permissions         |
+  |----------------|------------------|
+  | Microsoft Entra | Application.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource       | Permissions         |
+  |----------------|------------------|
+  | Microsoft Entra | Application.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
+
 ## Response
 
 <Tabs>
