Added minimal permissions to Entra enterpriseapp commands. Closes #6927

--- a/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-get.mdx
+++ b/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-get.mdx
@@ -57,6 +57,21 @@ Return details about the enterprise application with the specified ObjectId.
 m365 entra enterpriseapp get --objectId b2307a39-e878-458b-bc90-03bc578531dd
 ```
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+  </TabItem>
+  <TabItem value="Application">
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+  </TabItem>
+</Tabs>
+
 ## Response
 
 <Tabs>
