--- a/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-list.mdx
+++ b/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-list.mdx
@@ -44,6 +44,20 @@ Returns a list of all enterprise applications that comply with the specified dis
 m365 entra enterpriseapp list --displayName "My custom enterprise application" --tag "WindowsAzureActiveDirectoryIntegratedApp"
 ```
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+  </TabItem>
+  <TabItem value="Application">
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+  </TabItem>
+</Tabs>
+
 ## Response
 
 <Tabs>
