Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -13,6 +13,10 @@ sidebar_position: 4
 - migrated [status](../cmd/status.mdx) to Zod [#6912](https://github.com/pnp/cli-microsoft365/issues/6912)
 - migrated [booking business list](../cmd/booking/business/business-list.mdx) to Zod [#6891](https://github.com/pnp/cli-microsoft365/issues/6891)
 - migrated [pa environment list](../cmd/pa/environment/environment-list.mdx) to Zod [#6902](https://github.com/pnp/cli-microsoft365/issues/6902)
+- migrated [connection list](../cmd/connection/connection-list.mdx) to Zod [#6911](https://github.com/pnp/cli-microsoft365/issues/6902)
+- migrated [purview retentionevent list](../cmd/purview/retentionevent/retentionevent-list.mdx) to Zod [#6898](https://github.com/pnp/cli-microsoft365/issues/6898)
+- migrated [outlook roomlist list](../cmd/outlook/roomlist/roomlist-list.mdx) to Zod [#6899](https://github.com/pnp/cli-microsoft365/issues/6899)
+- migrated [onedrive list](../cmd/onedrive/onedrive-list.mdx) to Zod [#6900](https://github.com/pnp/cli-microsoft365/issues/6900)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
