--- a/docs/docs/cmd/entra/m365group/m365group-teamify.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-teamify.mdx
@@ -25,6 +25,23 @@ m365 entra m365group teamify [options]
 
 <Global />
 
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                  |
+  |-----------------|----------------------------------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions  |
+  |-----------------|--------------|
+  | Microsoft Graph | Group.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Creates a new Microsoft Teams team under existing Microsoft 365 group with the specified id.
