--- a/docs/docs/cmd/entra/m365group/m365group-list.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-list.mdx
@@ -30,6 +30,25 @@ m365 entra m365group list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Remarks
 
 Using the `--withSiteUrl` option, you can retrieve the URL of the site associated with the particular Microsoft 365 Group. If you however retrieve too many groups and will try to get their site URLs, you will most likely get an error as the command will get throttled, issuing too many requests, too frequently. If you get an error, consider narrowing down the result set using the `--displayName` and `--mailNickname` filters.
