--- a/docs/docs/cmd/entra/m365group/m365group-get.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-get.mdx
@@ -27,6 +27,25 @@ m365 entra m365group get [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get information about the Microsoft 365 Group with id _1caf7dcd-7e83-4c3a-94f7-932a1299c844_.
