--- a/docs/docs/cmd/entra/m365group/m365group-renew.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-renew.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra m365group renew
 
