Added minimal permission for 'entra groupsetting' commands. Closes #6937

--- a/docs/docs/cmd/entra/groupsetting/groupsetting-get.mdx
+++ b/docs/docs/cmd/entra/groupsetting/groupsetting-get.mdx
@@ -21,6 +21,25 @@ m365 entra groupsetting get [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions            |
+  |-----------------|------------------------|
+  | Microsoft Graph | GroupSettings.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions            |
+  |-----------------|------------------------|
+  | Microsoft Graph | GroupSettings.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get information about the group setting with id _1caf7dcd-7e83-4c3a-94f7-932a1299c844_
