--- a/docs/docs/cmd/entra/groupsetting/groupsetting-set.mdx
+++ b/docs/docs/cmd/entra/groupsetting/groupsetting-set.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra groupsetting set
 
@@ -18,6 +20,25 @@ m365 entra groupsetting set [options]
 ```
 
 <Global />
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | GroupSettings.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | GroupSettings.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Remarks
 
