--- a/docs/docs/cmd/entra/groupsetting/groupsetting-list.mdx
+++ b/docs/docs/cmd/entra/groupsetting/groupsetting-list.mdx
@@ -16,6 +16,25 @@ m365 entra groupsetting list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions            |
+  |-----------------|------------------------|
+  | Microsoft Graph | GroupSettings.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions            |
+  |-----------------|------------------------|
+  | Microsoft Graph | GroupSettings.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 List all group settings in the tenant
