--- a/docs/docs/cmd/entra/groupsetting/groupsetting-remove.mdx
+++ b/docs/docs/cmd/entra/groupsetting/groupsetting-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra groupsetting remove
 
@@ -21,6 +23,25 @@ m365 entra groupsetting remove [options]
 ```
 
 <Global />
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                  |
+  |-----------------|----------------------------------------------|
+  | Microsoft Graph | GroupSettings.ReadWrite.All, Directory.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions  |
+  |-----------------|--------------|
+  | Microsoft Graph | GroupSettings.ReadWrite.All, Directory.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Remarks
 
