Fix: updated resource names to Microsoft Graph, corrected permissions tables, removed extra blank lines

--- a/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-list.mdx
+++ b/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-list.mdx
@@ -45,24 +45,18 @@ m365 entra enterpriseapp list --displayName "My custom enterprise application" -
 ```
 
 ## Permissions
-
 <Tabs>
   <TabItem value="Delegated">
-
-  | Resource       | Permissions       |
-  |----------------|-----------------|
-  | Microsoft Entra | Application.Read.All |
-
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
   </TabItem>
   <TabItem value="Application">
-
-  | Resource       | Permissions       |
-  |----------------|-----------------|
-  | Microsoft Entra | Application.Read.All |
-
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
   </TabItem>
 </Tabs>
-
 
 ## Response
 
