--- a/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-get.mdx
+++ b/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-get.mdx
@@ -61,22 +61,16 @@ m365 entra enterpriseapp get --objectId b2307a39-e878-458b-bc90-03bc578531dd
 
 <Tabs>
   <TabItem value="Delegated">
-
-  | Resource       | Permissions       |
-  |----------------|-----------------|
-  | Microsoft Entra | Application.Read.All |
-
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
   </TabItem>
   <TabItem value="Application">
-
-  | Resource       | Permissions       |
-  |----------------|-----------------|
-  | Microsoft Entra | Application.Read.All |
-
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
   </TabItem>
 </Tabs>
-
-
 
 ## Response
 
