--- a/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-remove.mdx
+++ b/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-remove.mdx
@@ -57,25 +57,18 @@ m365 entra enterpriseapp remove --objectId b2307a39-e878-458b-bc90-03bc578531dd
 ```
 
 ## Permissions
-
 <Tabs>
   <TabItem value="Delegated">
-
-  | Resource       | Permissions              |
-  |----------------|------------------------|
-  | Microsoft Entra | Application.ReadWrite.All |
-
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | Application.ReadWrite.All |
   </TabItem>
   <TabItem value="Application">
-
-  | Resource       | Permissions              |
-  |----------------|------------------------|
-  | Microsoft Entra | Application.ReadWrite.All |
-
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | Application.ReadWrite.All |
   </TabItem>
 </Tabs>
-
-
 
 ## Response
 
