--- a/docs/docs/cmd/entra/m365group/m365group-add.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-add.mdx
@@ -71,9 +71,9 @@ HiddenMembership | Owner permission is needed to join the group. Guest users can
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                                  |
-  |-----------------|----------------------------------------------|
-  | Microsoft Graph | Group.ReadWrite.All, Directory.ReadWrite.All |
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
 
   </TabItem>
   <TabItem value="Application">
