--- a/docs/docs/cmd/entra/m365group/m365group-add.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-add.mdx
@@ -80,7 +80,7 @@ HiddenMembership | Owner permission is needed to join the group. Guest users can
 
   | Resource        | Permissions  |
   |-----------------|--------------|
-  | Microsoft Graph | Group.Create, Directory.ReadWrite.All, Group.ReadWrite.All |
+  | Microsoft Graph | Group.Create |
 
   </TabItem>
 </Tabs>
