--- a/docs/docs/cmd/entra/m365group/m365group-get.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-get.mdx
@@ -32,9 +32,9 @@ m365 entra m365group get [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                                  |
-  |-----------------|----------------------------------------------|
-  | Microsoft Graph | GroupMember.Read.All, Group.Read.All, Directory.Read.All |
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Group.Read.All |
 
   </TabItem>
   <TabItem value="Application">
